src/sass/60_components/_components.team.scss
.c-team {
  $c-team: &;

  &__container {
    @include media-breakpoint-down(sm) {
      margin: 0;
      padding: 0;
      width: 100vw;
      max-width: unset;
    }
  }

  &__row {
    display: flex;
    gap: 2rem 0;
    @include media-breakpoint-up(xl) {
      gap: 3.5rem 0;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 1.5rem 0;
  }

  &__headline {
  }

  &__text {
  }

  &__members {
    display: grid;
    grid-template-columns: 1fr;
    gap: 1rem;
    @include media-breakpoint-up(md) {
      grid-template-columns: repeat(2, minmax(0, 1fr));
    }
    @include media-breakpoint-up(xxl) {
      grid-template-columns: repeat(3, minmax(0, 1fr));
    }
  }

  &__slider {
    margin: 0;
    contain: layout;
    overflow: visible;

    .c-slider__track {
      overflow: visible;
    }
  }

  &__buttons {
    justify-content: center;
    @include media-breakpoint-up(xl) {
      max-width: 66.6666666667%;
    }
  }
}

